[project]
name = "webex-a2a-hello-world"
version = "0.1.0"
description = "Deployable A2A hello-world server for Webex Developer beta testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=1.0.3",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "pydantic>=2.11.4",
    "sse-starlette>=2.3.5",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[project.urls]
Homepage = "https://github.com/WebexSamples/webex-a2a-hello-world"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webex_a2a_hello_world"]
